--- a/public/styles/site/index.scss
+++ b/public/styles/site/index.scss
@@ -13,6 +13,10 @@
 	}
   }
   
+  p {
+	text-align: justify;
+  }
+  
   .card.horizontal {
 	.card-image {
 	  width: 50%;
